# aoc-2023

./: .dir-locals.el  .gitignore  advent-of-code.cabal  example.cabal  flake.nix  justfile
app/: Main.hs
src/: Main.hs
src/Lib/: Dfs.hs  Parser.hs  Solution.hs  Stack.hs  TaskRunner.hs  Utils.hs
src/Solutions/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Main.hs  Utils.hs  tests.hs
