cabal-version: 3.0
name:          advent-of-code
version:       2023
build-type:    Simple

common warnings
  ghc-options: -Wall

library advent-of-code-solutions
  import:           warnings
  hs-source-dirs:   src
  build-depends:
    , array
    , base
    , utility-ht
    , MissingH
    , monad-memo
    , mtl
    , parsec
    , split
    , text
    , extra
    , containers
    , hashmap

  exposed-modules:
    Lib.Solution
    Solutions.Day1
    Solutions.Day2
    Solutions.Day3
    Solutions.Day4
    Solutions.Day5
    Solutions.Day6
    Solutions.Day7
    Solutions.Day8
    Solutions.Day9

  other-modules:
    Lib.Parser
    Lib.TaskRunner
    Lib.Utils
    Lib.Stack

  default-language: Haskell2010

executable advent-of-code
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , advent-of-code-solutions
    , base

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite Tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   test
  build-depends:
    , advent-of-code-solutions
    , base
    , tasty
    , tasty-hunit

  other-modules:    Utils
  default-language: Haskell2010
