cabal-version: 3.0
name:          advent-of-code
version:       2023
build-type:    Simple

common warnings
  ghc-options: -Wall

library advent-of-code-solutions
  import:           warnings
  hs-source-dirs:   src
  build-depends:
    , array
    , base
    , containers
    , data-ordlist
    , extra
    , ghc
    , hashable
    , hashmap
    , matrix
    , MissingH
    , monad-memo
    , mtl
    , parallel
    , parsec
    , split
    , text
    , utility-ht

  exposed-modules:
    Lib.Solution
    Solutions.Day1
    Solutions.Day10
    Solutions.Day11
    Solutions.Day12
    Solutions.Day13
    Solutions.Day14
    Solutions.Day15
    Solutions.Day16
    Solutions.Day18
    Solutions.Day19
    Solutions.Day2
    Solutions.Day20
    Solutions.Day21
    Solutions.Day3
    Solutions.Day4
    Solutions.Day5
    Solutions.Day6
    Solutions.Day7
    Solutions.Day8
    Solutions.Day9

  other-modules:
    Lib.Dfs
    Lib.Parser
    Lib.Stack
    Lib.TaskRunner
    Lib.Utils

  default-language: Haskell2010

executable advent-of-code
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , advent-of-code-solutions
    , base

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite Tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   test
  build-depends:
    , advent-of-code-solutions
    , base
    , tasty
    , tasty-hunit

  other-modules:    Utils
  default-language: Haskell2010
